tests/errors/leds.td
component leds {
  provides interface leds;
  requires interface leds;
  requires interface aa;
}
